--- a/Menu-francais.html
+++ b/Menu-francais.html
@@ -17,6 +17,7 @@
                     <img src="images/restaurants/francais.jpg" class="photoRestaurant" alt="photo francais">
                 
             </header>
+            <div class="contain">
             <section class="Menu-plat">
                 <h1>Bastille<i class="far fa-heart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
@@ -73,5 +74,6 @@
                     </p>
                 </aside>
             </footer>
+            </div>
         </body>   
     </html>         
