--- a/Menu-note.html
+++ b/Menu-note.html
@@ -15,8 +15,8 @@
                     <img src="images/logo/ohmyfood.png" class="logo-titre" alt="logo omyfood"/>
                 </figure>
                     <img src="images/restaurants/note.jpg" class="photoRestaurant" alt="photo note">
-                
             </header>
+            <div class="contain">
             <section class="Menu-plat">
                 <h1>The Enchanted Plate<i class="far fa-heart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
@@ -77,5 +77,6 @@
                     </p>
                 </aside>
             </footer>
+            </div>
         </body>   
     </html>         
