--- a/Menu-palette.html
+++ b/Menu-palette.html
@@ -15,8 +15,8 @@
                     <img src="images/logo/ohmyfood.png" class="logo-titre" alt="logo omyfood"/>
                 </figure>
                     <img src="images/restaurants/palette.jpg" class="photoRestaurant" alt="phot palette">
-                
             </header>
+            <div class="contain">
             <section class="Menu-plat">
                 <h1>The Full Palette<i class="far fa-heart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
@@ -73,5 +73,6 @@
                     </p>
                 </aside>
             </footer>
+            </div>
         </body>   
     </html>         
