--- a/Homepage.html
+++ b/Homepage.html
@@ -20,7 +20,7 @@
                         <h1>Book the menu you like</h1>
                         <p>Discover top of the art-restaurants we picked for you</p>
                         <a href="#Menu">
-                        <button class="homepage-header__btnmenu">Explore our restaurants</button>
+                        <button class="btnmenu">Explore our restaurants</button>
                         </a>
                 </section>
             </header>
@@ -34,24 +34,24 @@
                 </section>
                 <section class="homepage-restaurant">    
                     <h1>Restaurants</h1>
-                    <a href="Menu-palette.html">
                         <figure class="homepage-restaurant__image">
+                            <a href="Menu-palette.html">
                             <img src="images/restaurants/palette.jpg" alt="image palette">
-                            <figcaption><h2>The Full Palette</h2><p>New york<i class="far fa-heart"></i></p></figcaption>
+                            </a>
+                            <figcaption><h2>The Full Palette</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
                         </figure>
-                    </a>
-                    <a href="Menu-note.html">
                         <figure class="homepage-restaurant__image">
+                            <a href="Menu-note.html">
                             <img src="images/restaurants/note.jpg" alt="image note">
-                            <figcaption><h2>The Enchanted Plate</h2><p>New york<i class="far fa-heart"></i></p></figcaption>
+                            </a>
+                            <figcaption><h2>The Enchanted Plate</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
                         </figure>
-                    </a>
-                    <a href="Menu-delice.html">
                         <figure class="homepage-restaurant__image">
+                            <a href="Menu-delice.html">
                             <img src="images/restaurants/delice.jpg" alt="image delice">
-                            <figcaption><h2>Le Gourmand</h2><p>New york<i class="far fa-heart"></i></p></figcaption>
+                            </a>
+                            <figcaption><h2>Le Gourmand</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
                         </figure>
-                    </a>
                         <figure class="homepage-restaurant__image">
                             <a href="Menu-francais.html">
                             <img src="images/restaurants/francais.jpg" alt="image francais">
@@ -63,14 +63,12 @@
             <footer>
                 <aside class="homepage-footer">
                     <figure>
-                        <img src="images/logo/ohmyfood@2x.svg/" class="logo" alt="logo">
+                        <img src="images/logo/ohmyfood.png" class="logo" alt="logo">
                     </figure>
-                    <p>
-                        <i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a> <br>
-                        <i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a> <br>
-                        <a href="Legal.html">Legal</a><br>
-                        <a href="mailto:omyfood@gmail.com">Contact</a>
-                    </p>
+                        <p><i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a></p>
+                        <p><i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a></p>
+                        <p><a href="Legal.html">Legal</a></p>
+                        <p><a href="mailto:omyfood@gmail.com">Contact</a></p>
                 </aside>
             </footer>
         </body>   
