--- a/Menu-francais.html
+++ b/Menu-francais.html
@@ -15,63 +15,69 @@
                     <img src="images/logo/ohmyfood.png" class="logo-titre" alt="logo omyfood"/>
                 </figure>
                     <img src="images/restaurants/francais.jpg" class="photoRestaurant" alt="photo francais">
-                
             </header>
             <div class="contain">
             <section class="Menu-plat">
-                <h1>Bastille<i class="far fa-heart"></i></h1>
+                <h1>Bastille<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
-                <div class="plat">
+                <div class="plats plats1">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Citrus Squid Carpaccio</h4>
-                    <p>with orange zest 25€</p>
+                    <p><strong>with orange zest</strong> <span>25€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats2">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Grandmother's Vegatable Soup</h4>
-                    <p>Carrots, parsnips, Jerusalem artichoke 35€</p>
+                    <p><strong>Carrots, parsnips, Jerusalem artichoke</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats3">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Onion Soup</h4>
-                    <p>Revisited 20€</p>
+                    <p><strong>Revisited</strong> <span>20€</span></p>
                 </div>
                 <h3><span>MAIN</span> DISH</h3>
-                <div class="plat">
+                <div class="plats plats4">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Scallops</h4>
-                    <p>with mashed parsnip 40€</p>
+                    <p><strong>with mashed parsnip</strong> <span>40€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats5">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Magret de Carnard</h4>
-                    <p>with mashed potatoes 35€</p>
+                    <p><strong>with mashed potatoes</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats6">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Game Hen</h4>
-                    <p>with vegetables gnocchis 44€</p>
+                    <p><strong>with vegetables gnocchis</strong> <span>44€</span></p>
                     </div>
                 <h3><span>DESS</span>ERT</h3>
-                <div class="plat">
+                <div class="plats plats7">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Floral Ice Cream</h4>
-                    <p>with hazelnut butter 18€</p>
+                    <p><strong>with hazelnut butter</strong> <span>18€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats8">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Chocolat Lava Cake</h4>
-                    <p>Revisited 22€</p>
+                    <p><strong>Revisited</strong> <span>22€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats9">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                         <h4>Napolean</h4>
-                        <p>with blueberries and marzipan 23€</p>
+                        <p><strong>with blueberries and marzipan</strong> <span>23€</span></p>
                 </div>
                 <button class="btn-order">Order</button>
             </section>
             <footer>
                 <aside class="homepage-footer">
                     <figure>
-                        <img src="images/logo/ohmyfood@2x.svg/" class="logo" alt="logo">
+                        <img src="images/logo/ohmyfood.png" class="logo" alt="logo">
                     </figure>
-                    <p>
-                        <i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a> <br>
-                        <i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a> <br>
-                        <a href="Legal.html">Legal</a><br>
-                        <a href="mailto:omyfood@gmail.com">Contact</a>
-                    </p>
+                    <p><i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a></p>
+                    <p><i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a></p>
+                    <p><a href="Legal.html">Legal</a></p>
+                    <p><a href="mailto:omyfood@gmail.com">Contact</a></p>
                 </aside>
             </footer>
             </div>
