--- a/Menu-palette.html
+++ b/Menu-palette.html
@@ -18,59 +18,66 @@
             </header>
             <div class="contain">
             <section class="Menu-plat">
-                <h1>The Full Palette<i class="far fa-heart"></i></h1>
+                <h1>The Full Palette<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
-                <div class="plat">
+                <div class="plats plats1">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Escargot</h4>
-                    <p>with southern French spices 25€</p>
+                    <p><strong>with southern French spices</strong> <span>25€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats2">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Duck Foie Gras</h4>
-                    <p>with black truffes shaving 35€</p>
+                    <p><strong>with black truffes shaving</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats3">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Fried egg</h4>
-                    <p>.... 20€</p>
+                    <p>.... <span>20€</span></p>
                 </div>
                 <h3><span>MAIN</span> DISH</h3>
-                <div class="plat">
+                <div class="plats plats4">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Herb-Encrusted Steak</h4>
-                    <p>with delicately sliced and seasoned vegetables 40€</p>
+                    <p><strong>with delicately sliced and seasoned vegetables</strong> <span>40€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats5">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Ox Tail Shepard's Pie</h4>
-                    <p>with black truffe and pureed parsnip 35€</p>
+                    <p><strong>with black truffe and pureed parsnip</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats6">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Filet de Sole</h4>
-                    <p>with citrus dressing 44€</p>
+                    <p><strong>with citrus dressing</strong> <span>44€</span></p>
                 </div>
                 <h3><span>DESS</span>ERT</h3>
-                <div class="plat">
+                <div class="plats plats7">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Paris-Brest</h4>
-                    <p>Revisited 18€</p>
+                    <p><strong>Revisited</strong> <span>18€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats8">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Chocolat Macaroons</h4>
-                    <p>with vanilla ice cream 22€</p>
+                    <p><strong>with vanilla ice cream</strong> <span>22€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats9">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Chocolat Mousse</h4>
-                    <p>with spices and black truffe 23€</p>
+                    <p><strong>with spices and black truffe</strong> <span>23€</span></p>
                 </div>
                 <button class="btn-order">Order</button>
             </section>
             <footer>
                 <aside class="homepage-footer">
                     <figure>
-                        <img src="images/logo/ohmyfood@2x.svg/" class="logo" alt="logo">
+                        <img src="images/logo/ohmyfood.png" class="logo" alt="logo">
                     </figure>
-                    <p>
-                        <i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a> <br>
-                        <i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a> <br>
-                        <a href="Legal.html">Legal</a><br>
-                        <a href="mailto:omyfood@gmail.com">Contact</a>
-                    </p>
+                    <p><i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a></p>
+                    <p><i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a></p>
+                    <p><a href="Legal.html">Legal</a></p>
+                    <p><a href="mailto:omyfood@gmail.com">Contact</a></p>
                 </aside>
             </footer>
             </div>
