--- a/Menu-delice.html
+++ b/Menu-delice.html
@@ -18,59 +18,66 @@
             </header>
             <div class="contain">
             <section class="Menu-plat">
-                <h1>Le Gourmand<i class="far fa-heart"></i></h1>
+                <h1>Le Gourmand<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
-                <div class="plat">
+                <div class="plats plats1">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div> 
                     <h4>Tuna Carpaccio</h4>
-                    <p>Seasoned with yuzu 25€</p>
+                    <p><strong>Seasoned with yuzu</strong> <span>25€</span></p> 
                 </div>
-                <div class="plat">
+                <div class="plats plats2">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Crunchy Lobster Croquets</h4>
-                    <p>with seasonal vegetables 35€</p>
+                    <p><strong>with seasonal vegetables</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats3">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Mushroom Soup</h4>
-                    <p>with truffes 20€</p>
+                    <p><strong>with truffes</strong> <span>20€</span></p>
                 </div>   
                 <h3><span>MAIN</span> DISH</h3>
-                <div class="plat">
+                <div class="plats plats4">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Roast Chicken with Provincial Herbs</h4>
-                    <p>with turffe cream 40€</p>
+                    <p><strong>with turffe cream</strong> <span>40€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats5">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Roasted Lobster</h4>
-                    <p>with seasonal vegetables 35€</p>
+                    <p><strong>with seasonal vegetables</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats6">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Angus Beef Ribs</h4>
-                    <p>with marshed parshnips 44€</p>
+                    <p><strong>with marshed parshnips</strong> <span>44€</span></p>
                 </div>
                 <h3><span>DESS</span>ERT</h3>
-                <div class="plat">
+                <div class="plats plats7">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Assorted Dessert Plate</h4>
-                    <p>Chef's choice 18€</p>
+                    <p><strong>Chef's choice</strong> <span>18€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats8">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Crème Brulée</h4>
-                    <p>Revisited 22€</p>
+                    <p><strong>Revisited</strong> <span>22€</span></p>
                 </div>
-                    <div class="plat">
+                    <div class="plats plats9">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Tiramisu</h4>
-                    <p>with hazelnuts 23€</p>
+                    <p><strong>with hazelnuts</strong> <span>23€</span></p>
                 </div>
                 <button class="btn-order">Order</button>
             </section>
             <footer>
                 <aside class="homepage-footer">
                     <figure>
-                        <img src="images/logo/ohmyfood@2x.svg/" class="logo" alt="logo">
+                        <img src="images/logo/ohmyfood.png" class="logo" alt="logo">
                     </figure>
-                    <p>
-                        <i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a> <br>
-                        <i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a> <br>
-                        <a href="Legal.html">Legal</a><br>
-                        <a href="mailto:omyfood@gmail.com">Contact</a>
-                    </p>
+                    <p><i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a></p>
+                    <p><i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a></p>
+                    <p><a href="Legal.html">Legal</a></p>
+                    <p><a href="mailto:omyfood@gmail.com">Contact</a></p>
                 </aside>
             </footer>
             </div>
