--- a/Menu-note.html
+++ b/Menu-note.html
@@ -18,63 +18,71 @@
             </header>
             <div class="contain">
             <section class="Menu-plat">
-                <h1>The Enchanted Plate<i class="far fa-heart"></i></h1>
+                <h1>The Enchanted Plate<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></h1>
                 <h3><span>ENTR</span>EES</h3>
-                <div class="plat">
+                <div class="plats plats1">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Foie Gras Ravioli</h4>
-                    <p>with truffe cream 25€</p>
+                    <p><strong>with truffe cream</strong> <span>25€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats2">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Oscietra Caviar</h4>
-                    <p>with buckwheat blinis 35€</p>
+                    <p><strong>with buckwheat blinis</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats3">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Lobster and Leek Foam</h4>
-                    <p>Marinated with orange zest 20€</p>
+                    <p><strong>Marinated with orange zest</strong> <span>20€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats4">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Duck Foie Gras</h4>
-                    <p>with fig jam and grilled baguette 35€</p>
+                    <p><strong>with fig jam and grilled baguette</strong> <span>35€</span></p>
                 </div>
                 <h3><span>MAIN</span> DISH</h3>
-                <div class="plat">
+                <div class="plats plats5">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Fresh Buttered Scallops</h4>
-                    <p>with white celery puree 40€</p>
+                    <p><strong>with white celery puree</strong> <span>40€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats6">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Pan-Fried Lobster</h4>
-                    <p>with mashed sweet potatoes 35€</p>
+                    <p><strong>with mashed sweet potatoes</strong> <span>35€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats7">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Braised Ox Tail</h4>
-                    <p>with wild rice and lemon zest 44€</p>
+                    <p><strong>with wild rice and lemon zest</strong> <span>44€</span></p>
                 </div>
                 <h3><span>DESS</span>ERT</h3>
-                <div class="plat">
+                <div class="plats plats8">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Chocolat and Hazelnut Macaroons</h4>
-                    <p>with caramel butter ice cream 18€</p>
+                    <p><strong>with caramel butter ice cream</strong> <span>18€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats9">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Baba au Rhum</h4>
-                    <p>with lemon drizzle 22€</p>
+                    <p><strong>with lemon drizzle</strong> <span>22€</span></p>
                 </div>
-                <div class="plat">
+                <div class="plats plats10">
+                    <div class="box"><i class="fas fa-check-circle fa-lg valid"></i></div>
                     <h4>Lemon Meringue Pie</h4>
-                    <p>Destuctured 23€</p>
+                    <p><strong>Destuctured</strong> <span>23€</span></p>
                 </div>
                 <button class="btn-order">Order</button>
             </section>
             <footer>
                 <aside class="homepage-footer">
                     <figure>
-                        <img src="images/logo/ohmyfood@2x.svg/" class="logo" alt="logo">
+                        <img src="images/logo/ohmyfood.png" class="logo" alt="logo">
                     </figure>
-                    <p>
-                        <i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a> <br>
-                        <i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a> <br>
-                        <a href="Legal.html">Legal</a><br>
-                        <a href="mailto:omyfood@gmail.com">Contact</a>
-                    </p>
+                    <p><i class="fas fa-crosshairs"></i> <a href="suggestpage.html">Suggeste a restaurant</a></p>
+                    <p><i class="far fa-flag"></i><a href="partnerpage.html"> Become a partner</a></p>
+                    <p><a href="Legal.html">Legal</a></p>
+                    <p><a href="mailto:omyfood@gmail.com">Contact</a></p>
                 </aside>
             </footer>
             </div>
