--- a/Homepage.html
+++ b/Homepage.html
@@ -9,8 +9,8 @@
         </head>
         <body>
             <header>
-                <figure>
-                    <img src="images/logo/ohmyfood.png" class="logo-titre" alt="logo omyfood"/>
+                <figure class="image">
+                    <img src="images/logo/ohmyfood.png" class="logoMainpage" alt="logo omyfood"/>
                 </figure>
                 <section class="homepage-header">
                     <div class="homepage-header__position">
@@ -36,27 +36,27 @@
                     <h1>Restaurants</h1>
                         <figure class="homepage-restaurant__image">
                             <a href="Menu-palette.html">
-                            <img src="images/restaurants/palette.jpg" alt="image palette">
+                            <img src="images/restaurants/palette.jpg" alt="photo d'un plat">
                             </a>
-                            <figcaption><h2>The Full Palette</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
+                            <figcaption><h2>The Full Palette</h2><p>New york<i class="far fa-heart fa-lg heart"></i><i class="fas fa-heart fa-lg fullHeart"></i></p></figcaption>
                         </figure>
                         <figure class="homepage-restaurant__image">
                             <a href="Menu-note.html">
-                            <img src="images/restaurants/note.jpg" alt="image note">
+                            <img src="images/restaurants/note.jpg" alt="photo d'un plat">
                             </a>
-                            <figcaption><h2>The Enchanted Plate</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
+                            <figcaption><h2>The Enchanted Plate</h2><p>New york<i class="far fa-heart fa-lg heart"></i><i class="fas fa-heart fa-lg fullHeart"></i></p></figcaption>
                         </figure>
                         <figure class="homepage-restaurant__image">
                             <a href="Menu-delice.html">
-                            <img src="images/restaurants/delice.jpg" alt="image delice">
+                            <img src="images/restaurants/delice.jpg" alt="photo d'un plat">
                             </a>
-                            <figcaption><h2>Le Gourmand</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
+                            <figcaption><h2>Le Gourmand</h2><p>New york<i class="far fa-heart fa-lg heart"></i><i class="fas fa-heart fa-lg fullHeart"></i></p></figcaption>
                         </figure>
                         <figure class="homepage-restaurant__image">
                             <a href="Menu-francais.html">
-                            <img src="images/restaurants/francais.jpg" alt="image francais">
+                            <img src="images/restaurants/francais.jpg" alt="photo d'un plat">
                             </a>
-                            <figcaption><h2>Bastille</h2><p>New york<i class="far fa-heart heart"></i><i class="fas fa-heart fullHeart"></i></p></figcaption>
+                            <figcaption><h2>Bastille</h2><p>New york<i class="far fa-heart fa-lg heart"></i><i class="fas fa-heart fa-lg fullHeart"></i></p></figcaption>
                         </figure>
                     
                 </section>
