--- a/Menu-francais.html
+++ b/Menu-francais.html
@@ -67,7 +67,9 @@
                         <h4>Napolean</h4>
                         <p><strong>with blueberries and marzipan</strong> <span>23€</span></p>
                 </div>
-                <button class="btn-order">Order</button>
+                <div class="containBtn">
+                    <button class="btn-order">Order</button>
+                </div>
             </section>
             <footer>
                 <aside class="homepage-footer">
