--- a/Menu-note.html
+++ b/Menu-note.html
@@ -72,7 +72,9 @@
                     <h4>Lemon Meringue Pie</h4>
                     <p><strong>Destuctured</strong> <span>23€</span></p>
                 </div>
-                <button class="btn-order">Order</button>
+                <div class="containBtn">
+                    <button class="btn-order">Order</button>
+                </div>
             </section>
             <footer>
                 <aside class="homepage-footer">
