--- a/Menu-delice.html
+++ b/Menu-delice.html
@@ -67,7 +67,9 @@
                     <h4>Tiramisu</h4>
                     <p><strong>with hazelnuts</strong> <span>23€</span></p>
                 </div>
-                <button class="btn-order">Order</button>
+                <div class="containBtn">
+                    <button class="btn-order">Order</button>
+                </div>
             </section>
             <footer>
                 <aside class="homepage-footer">
