--- a/Menu-palette.html
+++ b/Menu-palette.html
@@ -67,7 +67,9 @@
                     <h4>Chocolat Mousse</h4>
                     <p><strong>with spices and black truffe</strong> <span>23€</span></p>
                 </div>
-                <button class="btn-order">Order</button>
+                <div class="containBtn">
+                    <button class="btn-order">Order</button>
+                </div>
             </section>
             <footer>
                 <aside class="homepage-footer">
