--- a/Menu-note.html
+++ b/Menu-note.html
@@ -10,7 +10,7 @@
         <body>
             <header class="menu-header">
                 <figure>
-					<a href="Homepage.html">
+					<a href="index.html">
                     <i class="fas fa-arrow-left"></i></a>
                     <img src="images/logo/ohmyfood.png" class="logo-titre" alt="logo omyfood"/>
                 </figure>
